welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:9: error: type mismatch;
 found   : Unit
 required: Int
		if (noDoubles == false) {
                ^